# caikit-nlp

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.konflux  pyproject.toml
.tekton/: README.md  caikit-nlp-211-pull-request.yaml  caikit-nlp-211-push.yaml  caikit-nlp-212-pull-request.yaml  caikit-nlp-212-push.yaml  caikit-nlp-213-pull-request.yaml  caikit-nlp-213-push.yaml  caikit-nlp-214-pull-request.yaml  caikit-nlp-214-push.yaml  caikit-nlp-215-pull-request.yaml  caikit-nlp-215-push.yaml  caikit-nlp-216-pull-request.yaml  caikit-nlp-216-push.yaml  caikit-nlp-217-pull-request.yaml  caikit-nlp-217-push.yaml  caikit-nlp-hermetic-poc-pull-request.yaml  caikit-nlp-hermetic-poc-push.yaml  caikit-nlp-pull-request.yaml  caikit-nlp-push.yaml  caikit-nlp-v2-18-pull-request.yaml  caikit-nlp-v2-18-push.yaml  caikit-nlp-v2-19-push.yaml  caikit-nlp-v2-20-push.yaml  caikit-nlp-v2-21-push.yaml  caikit-nlp-v2-22-push.yaml
